	Fixed: In case the passphrase is missing, user must not be prompted (iMSCP::OpenSSL)
	Fixed: Missing EOL in SSL certificate containers (iMSCP::OpenSSL)
	Fixed: The backend must not try to start services which are not used (MySQL, Bind9)
	Fixed: Quota script must ignore maildir which doesn't exist
	Replaced: Dovecot SASL by Cyrus SASL (Postfix)

GUI
	Fixed: Feature custom_dns_record is not known by the customerHasFeature() function

INSTALLER
	Added: Dialog box allowing to setup the public IP for servers which are inside a private LAN
	Added: Option allowing to force reinstallation/reconfiguration of distro packages
	Fixed: Bind9 cannot start if the resolvconf package is not configured yet (Debian Squeeze)
	Fixed: Installer hangs while packages installation (Debian Jessie)
	Fixed: Unable to migrate from ispCP (linked to the infinite loop in iMSCP_Update_Database::dropIndexByColumn())
	Updated: Preseed template file according new parameters

VENDOR:
	Added: Net::Domain::TLD version 1.72 from CPAN (This allow to have last available TLDs list for this module)

TICKETS
	Fixed #1072: Bug - Uninstaller error - iMSCP::File::delFile: Unable to delete file imscp_network...
	Fixed #1095: Bug - IP usage interface is broken
	Fixed #1097: Enhancement - Allow to set public IP for server which are inside a private LAN
	Fixed #1099: Bug - SQL users which belong to an account which is being deleted are not removed from mysql table
	Fixed #1106: Defect - PHP5-FPM server implementation - Reload failure under Ubuntu Trusty Thar
	Fixed #1109: Defect - .technology is not recognized as a valid top level domain
	Fixed #1110: Defect - /etc/php5/mods-available/mcrypt.ini does not exist (Ubuntu Quantal)

------------------------------------------------------------------------------------------------------------------------
1.1.11
------------------------------------------------------------------------------------------------------------------------

2014-06-08: Laurent Declercq