@@ -20,27 +20,18 @@
  * @package     iMSCP_Core
  * @subpackage  Client_Ftp
  * @copyright   2010-2014 by i-MSCP team
- * @author      iMSCP Team
  * @author      Laurent Declercq <l.declercq@nuxwin.com>
  * @link        http://www.i-mscp.net i-MSCP Home Site
  * @license     http://www.gnu.org/licenses/gpl-2.0.txt GPL v2
  */
 
 /***********************************************************************************************************************
- * Script short description:
- *
- * This script allows AjaxPlorer authentication from i-MSCP (onClick login)
- *
- */
-
-/***********************************************************************************************************************
- *  Script functions
+ *  Functions
  */
 
 /**
  * Get ftp login credentials
  *
- * @author Laurent Declercq <l.declercq@nuxwin.com>
  * @access private
  * @param  int $userId FTP User
  * @return array Array that contains login credentials or FALSE on failure
@@ -71,14 +62,13 @@ function _getLoginCredentials($userId)
 /**
  * Creates all cookies for Pydio (AjaXplorer)
  *
- * @author Laurent Declercq <l.declercq@nuxwin.com>
  * @access private
- * @param  array $cookies Array that contains cookies definitions for ajaxplorer
+ * @param  array|string $cookies Array or string which contains cookies definitions for ajaxplorer
  * @return void
  */
 function _ajaxplorerCreateCookies($cookies)
 {
-	foreach ($cookies as $cookie) {
+	foreach ((array) $cookies as $cookie) {
 		header("Set-Cookie: $cookie", false);
 	}
 }
@@ -86,9 +76,8 @@ function _ajaxplorerCreateCookies($cookies)
 /**
  * Pydio (AjaXplorer) authentication
  *
- * @author Laurent Declercq <l.declercq@nuxwin.com>
  * @param  int $userId ftp username
- * @return bool TRUE on success, FALSE otherwise
+ * @return bool FALSE on failure
  */
 function _ajaxplorerAuth($userId)
 {
@@ -167,6 +156,7 @@ function _ajaxplorerAuth($userId)
 
 	stream_context_set_default($contextOptions);
 
+	# TODO Parse the full response and display error message on authentication failure
 	$headers = get_headers("{$ajaxplorerUri}?secure_token={$secureToken}", true);
 
 	_ajaxplorerCreateCookies($headers['Set-Cookie']);
@@ -176,7 +166,7 @@ function _ajaxplorerAuth($userId)
 }
 
 /***********************************************************************************************************************
- * Main script
+ * Main
  */
 
 // Include core library
@@ -184,19 +174,15 @@ require_once 'imscp-lib.php';
 
 iMSCP_Events_Aggregator::getInstance()->dispatch(iMSCP_Events::onClientScriptStart);
 
-// Check login
 check_login('user');
 
 /** @var $cg iMSCP_Config_Handler_File */
 $cfg = iMSCP_Registry::get('config');
 
-if(!customerHasFeature('ftp') || !(isset($cfg->FILEMANAGER_ADDON) && $cfg->FILEMANAGER_ADDON == 'AjaXplorer')) {
+if(!customerHasFeature('ftp') || !(isset($cfg['FILEMANAGER_ADDON']) && $cfg['FILEMANAGER_ADDON'] == 'AjaXplorer')) {
 	showBadRequestErrorPage();
 }
 
-/**
- *  Dispatches the request
- */
 if (isset($_GET['id'])) {
 	if (!_ajaxplorerAuth(clean_input($_GET['id']))) {
 		redirectTo('ftp_accounts.php');
